Add some translations

--- a/l10n/po/ja_JP/_guides/amazon-sns.adoc.po
+++ b/l10n/po/ja_JP/_guides/amazon-sns.adoc.po
@@ -200,7 +200,7 @@ msgstr "Gitレポジトリをクローンするか `git clone {quickstarts-clone
 #: upstream/_guides/amazon-sns.adoc:85
 #, fuzzy
 msgid "The solution is located in the `amazon-sns-quickstart` {quickstarts-tree-url}/amazon-sns-quickstart[directory]."
-msgstr "ソリューションは `amazon-sns-quickstart` {quickstarts-tree-url}/amazon-sns-quickstart[directory] にあります。"
+msgstr "ソリューションは `amazon-sns-quickstart` {quickstarts-tree-url}/amazon-sns-quickstart[ディレクトリ] にあります。"
 
 #. type: Title ==
 #: upstream/_guides/amazon-sns.adoc:86
