--- a/l10n/po/ja_JP/_guides/amqp.adoc.po
+++ b/l10n/po/ja_JP/_guides/amqp.adoc.po
@@ -113,7 +113,7 @@ msgstr "Gitレポジトリをクローンするか `git clone {quickstarts-clone
 #: upstream/_guides/amqp.adoc:44
 #, fuzzy
 msgid "The solution is located in the `amqp-quickstart` {quickstarts-tree-url}/amqp-quickstart[directory]."
-msgstr "ソリューションは `amqp-quickstart` {quickstarts-tree-url}/amqp-quickstart[directory] にあります。"
+msgstr "ソリューションは `amqp-quickstart` {quickstarts-tree-url}/amqp-quickstart[ディレクトリ] にあります。"
 
 #. type: Title ==
 #: upstream/_guides/amqp.adoc:45
