--- a/l10n/po/ja_JP/_guides/config.adoc.po
+++ b/l10n/po/ja_JP/_guides/config.adoc.po
@@ -80,7 +80,7 @@ msgstr "Git レポジトリをクローンするか `git clone {quickstarts-clon
 #. type: Plain text
 #: upstream/_guides/config.adoc:32
 msgid "The solution is located in the `config-quickstart` {quickstarts-tree-url}/config-quickstart[directory]."
-msgstr "ソリューションは `config-quickstart` {quickstarts-tree-url}/config-quickstart[directory] にあります。"
+msgstr "ソリューションは `config-quickstart` {quickstarts-tree-url}/config-quickstart[ディレクトリ] にあります。"
 
 #. type: Title ==
 #: upstream/_guides/config.adoc:33
