--- a/l10n/po/ja_JP/_guides/elasticsearch.adoc.po
+++ b/l10n/po/ja_JP/_guides/elasticsearch.adoc.po
@@ -116,12 +116,12 @@ msgstr "Gitレポジトリをクローンするか `git clone {quickstarts-clone
 #. type: Plain text
 #: upstream/_guides/elasticsearch.adoc:45
 msgid "The solution for the low level client is located in the `elasticsearch-rest-client-quickstart` {quickstarts-tree-url}/elasticsearch-rest-client-quickstart[directory]."
-msgstr "低レベルクライアントのソリューションは `elasticsearch-rest-client-quickstart` {quickstarts-tree-url}/elasticsearch-rest-client-quickstart[directory] にあります。"
+msgstr "低レベルクライアントのソリューションは `elasticsearch-rest-client-quickstart` {quickstarts-tree-url}/elasticsearch-rest-client-quickstart[ディレクトリ] にあります。"
 
 #. type: Plain text
 #: upstream/_guides/elasticsearch.adoc:47
 msgid "The solution for the high level client is located in the `elasticsearch-rest-high-level-client-quickstart` {quickstarts-tree-url}/elasticsearch-rest-high-level-client-quickstart[directory]."
-msgstr "高レベルクライアントのソリューションは `elasticsearch-rest-high-level-client-quickstart` {quickstarts-tree-url}/elasticsearch-rest-high-level-client-quickstart[directory] にあります。"
+msgstr "高レベルクライアントのソリューションは `elasticsearch-rest-high-level-client-quickstart` {quickstarts-tree-url}/elasticsearch-rest-high-level-client-quickstart[ディレクトリ] にあります。"
 
 #. type: Title ==
 #: upstream/_guides/elasticsearch.adoc:48
