--- a/l10n/po/ja_JP/_guides/funqy-gcp-functions.adoc.po
+++ b/l10n/po/ja_JP/_guides/funqy-gcp-functions.adoc.po
@@ -121,7 +121,7 @@ msgstr "Gitレポジトリをクローンするか `git clone {quickstarts-clone
 #: upstream/_guides/funqy-gcp-functions.adoc:48
 #, fuzzy
 msgid "The solution is located in the `funqy-google-cloud-functions-quickstart` {quickstarts-tree-url}/funqy-quickstarts/funqy-google-cloud-functions-quickstart[directory]."
-msgstr "ソリューションは `funqy-google-cloud-functions-quickstart` {quickstarts-tree-url}/funqy-quickstarts/funqy-google-cloud-functions-quickstart[directory] にあります。"
+msgstr "ソリューションは `funqy-google-cloud-functions-quickstart` {quickstarts-tree-url}/funqy-quickstarts/funqy-google-cloud-functions-quickstart[ディレクトリ] にあります。"
 
 #. type: Title ==
 #: upstream/_guides/funqy-gcp-functions.adoc:49
