--- a/l10n/po/ja_JP/_guides/funqy-http.adoc.po
+++ b/l10n/po/ja_JP/_guides/funqy-http.adoc.po
@@ -85,7 +85,7 @@ msgstr "Gitレポジトリをクローンするか `git clone {quickstarts-clone
 #. type: Plain text
 #: upstream/_guides/funqy-http.adoc:36
 msgid "The solution is located in the `funqy-http-quickstart` {quickstarts-tree-url}/funqy-quickstarts/funqy-http-quickstart[directory]."
-msgstr "ソリューションは `funqy-http-quickstart` {quickstarts-tree-url}/funqy-quickstarts/funqy-http-quickstart[directory] にあります。"
+msgstr "ソリューションは `funqy-http-quickstart` {quickstarts-tree-url}/funqy-quickstarts/funqy-http-quickstart[ディレクトリ] にあります。"
 
 #. type: Title ==
 #: upstream/_guides/funqy-http.adoc:37
