--- a/l10n/po/ja_JP/_guides/funqy-knative-events.adoc.po
+++ b/l10n/po/ja_JP/_guides/funqy-knative-events.adoc.po
@@ -112,7 +112,7 @@ msgstr "Gitレポジトリをクローンするか `git clone {quickstarts-clone
 #. type: Plain text
 #: upstream/_guides/funqy-knative-events.adoc:45
 msgid "The solution is located in the `funqy-knative-events-quickstart` {quickstarts-tree-url}/funqy-quickstarts/funqy-knative-events-quickstart[directory]."
-msgstr "ソリューションは `funqy-knative-events-quickstart` {quickstarts-tree-url}/funqy-quickstarts/funqy-knative-events-quickstart[directory] にあります。"
+msgstr "ソリューションは `funqy-knative-events-quickstart` {quickstarts-tree-url}/funqy-quickstarts/funqy-knative-events-quickstart[ディレクトリ] にあります。"
 
 #. type: Title ==
 #: upstream/_guides/funqy-knative-events.adoc:46
