--- a/l10n/po/ja_JP/_guides/gcp-functions.adoc.po
+++ b/l10n/po/ja_JP/_guides/gcp-functions.adoc.po
@@ -95,7 +95,7 @@ msgstr "Gitリポジトリをクローンするか `git clone {quickstarts-clone
 #. type: Plain text
 #: upstream/_guides/gcp-functions.adoc:38
 msgid "The solution is located in the `google-cloud-functions-quickstart` {quickstarts-tree-url}/google-cloud-functions-quickstart[directory]."
-msgstr "このガイドでのソリューションは `google-cloud-functions-quickstart` {quickstarts-tree-url}/google-cloud-functions-quickstart[directory] にあります。"
+msgstr "このガイドでのソリューションは `google-cloud-functions-quickstart` {quickstarts-tree-url}/google-cloud-functions-quickstart[ディレクトリ] にあります。"
 
 #. type: Title ==
 #: upstream/_guides/gcp-functions.adoc:40
