--- a/l10n/po/ja_JP/_guides/getting-started.adoc.po
+++ b/l10n/po/ja_JP/_guides/getting-started.adoc.po
@@ -147,7 +147,7 @@ msgstr "git clone {quickstarts-clone-url}\n"
 #. type: Plain text
 #: upstream/_guides/getting-started.adoc:71
 msgid "The solution is located in the `getting-started` {quickstarts-tree-url}/getting-started[directory]."
-msgstr "ソリューションは `getting-started` {quickstarts-tree-url}/getting-started[directory] にあります。"
+msgstr "ソリューションは `getting-started` {quickstarts-tree-url}/getting-started[ディレクトリ] にあります。"
 
 #. type: Title ==
 #: upstream/_guides/getting-started.adoc:72
