--- a/l10n/po/ja_JP/_guides/jms.adoc.po
+++ b/l10n/po/ja_JP/_guides/jms.adoc.po
@@ -652,7 +652,7 @@ msgstr "Gitレポジトリをクローンするか `git clone {quickstarts-clone
 #: upstream/_guides/jms.adoc:358
 #, fuzzy
 msgid "The Artemis JMS solution is located in the `jms-quickstart` {quickstarts-tree-url}/jms-quickstart[directory]."
-msgstr "Artemis JMS ソリューションは `jms-quickstart` {quickstarts-tree-url}/jms-quickstart[directory] にあります。"
+msgstr "Artemis JMS ソリューションは `jms-quickstart` {quickstarts-tree-url}/jms-quickstart[ディレクトリ] にあります。"
 
 #. type: Plain text
 #: upstream/_guides/jms.adoc:362
@@ -731,4 +731,4 @@ msgstr "設定リファレンス"
 
 #, fuzzy
 #~ msgid "The solution is located in the `jms-quickstart` {quickstarts-tree-url}/jms-quickstart[directory]."
-#~ msgstr "ソリューションは `jms-quickstart` {quickstarts-tree-url}/jms-quickstart[directory] にあります。"
+#~ msgstr "ソリューションは `jms-quickstart` {quickstarts-tree-url}/jms-quickstart[ディレクトリ] にあります。"
