--- a/l10n/po/ja_JP/_guides/kafka.adoc.po
+++ b/l10n/po/ja_JP/_guides/kafka.adoc.po
@@ -109,7 +109,7 @@ msgstr "Git レポジトリーをクローンするか `git clone {quickstarts-c
 #. type: Plain text
 #: upstream/_guides/kafka.adoc:41
 msgid "The solution is located in the `kafka-quickstart` {quickstarts-tree-url}/kafka-quickstart[directory]."
-msgstr "このソリューションは `kafka-quickstart` {quickstarts-tree-url}/kafka-quickstart[directory] にあります。"
+msgstr "このソリューションは `kafka-quickstart` {quickstarts-tree-url}/kafka-quickstart[ディレクトリ] にあります。"
 
 #. type: Title ==
 #: upstream/_guides/kafka.adoc:42
