--- a/l10n/po/ja_JP/_guides/kogito.adoc.po
+++ b/l10n/po/ja_JP/_guides/kogito.adoc.po
@@ -182,7 +182,7 @@ msgstr "Gitレポジトリをクローンするか `git clone {quickstarts-clone
 #: upstream/_guides/kogito.adoc:78
 #, fuzzy
 msgid "The solution is located in the `kogito-quickstart` {quickstarts-tree-url}/kogito-quickstart[directory]."
-msgstr "解決策は `kogito-quickstart` {quickstarts-tree-url}/kogito-quickstart[directory] にあります。"
+msgstr "解決策は `kogito-quickstart` {quickstarts-tree-url}/kogito-quickstart[ディレクトリ] にあります。"
 
 #. type: Title ==
 #: upstream/_guides/kogito.adoc:79
