--- a/l10n/po/ja_JP/_guides/lifecycle.adoc.po
+++ b/l10n/po/ja_JP/_guides/lifecycle.adoc.po
@@ -100,7 +100,7 @@ msgstr "Gitレポジトリをクローンするか `git clone {quickstarts-clone
 #. type: Plain text
 #: upstream/_guides/lifecycle.adoc:35
 msgid "The solution is located in the `lifecycle-quickstart` {quickstarts-tree-url}/lifecycle-quickstart[directory]."
-msgstr "ソリューションは `lifecycle-quickstart`  {quickstarts-tree-url}/lifecycle-quickstart[directory] にあります。"
+msgstr "ソリューションは `lifecycle-quickstart`  {quickstarts-tree-url}/lifecycle-quickstart[ディレクトリ] にあります。"
 
 #. type: Title ==
 #: upstream/_guides/lifecycle.adoc:36
