--- a/l10n/po/ja_JP/_guides/microprofile-metrics.adoc.po
+++ b/l10n/po/ja_JP/_guides/microprofile-metrics.adoc.po
@@ -110,7 +110,7 @@ msgstr "Gitレポジトリをクローンするか `git clone {quickstarts-clone
 #. type: Plain text
 #: upstream/_guides/microprofile-metrics.adoc:49
 msgid "The solution is located in the `microprofile-metrics-quickstart` {quickstarts-tree-url}/microprofile-metrics-quickstart[directory]."
-msgstr "ソリューションは `microprofile-metrics-quickstart` {quickstarts-tree-url}/microprofile-metrics-quickstart[directory] にあります。"
+msgstr "ソリューションは `microprofile-metrics-quickstart` {quickstarts-tree-url}/microprofile-metrics-quickstart[ディレクトリ] にあります。"
 
 #. type: Title ==
 #: upstream/_guides/microprofile-metrics.adoc:50
