--- a/l10n/po/ja_JP/_guides/neo4j.adoc.po
+++ b/l10n/po/ja_JP/_guides/neo4j.adoc.po
@@ -291,7 +291,7 @@ msgstr "Git リポジトリのクローン: git clone https://github.com/quarkus
 #: upstream/_guides/neo4j.adoc:120
 #, fuzzy
 msgid "The solution is located in the `neo4j-quickstart` {quickstarts-tree-url}/neo4j-quickstart[directory].  It contains a very simple UI to use the JAX-RS resources created here, too."
-msgstr "ソリューションは `neo4j-quickstart` {quickstarts-tree-url}/neo4j-quickstart[directory] にあります。ここで作成したJAX-RSリソースを利用するための非常にシンプルなUIも含まれています。"
+msgstr "ソリューションは `neo4j-quickstart` {quickstarts-tree-url}/neo4j-quickstart[ディレクトリ] にあります。ここで作成したJAX-RSリソースを利用するための非常にシンプルなUIも含まれています。"
 
 #. type: Title ==
 #: upstream/_guides/neo4j.adoc:121
