--- a/l10n/po/ja_JP/_guides/opentracing.adoc.po
+++ b/l10n/po/ja_JP/_guides/opentracing.adoc.po
@@ -96,7 +96,7 @@ msgstr "Gitレポジトリをクローンするか `git clone {quickstarts-clone
 #. type: Plain text
 #: upstream/_guides/opentracing.adoc:37
 msgid "The solution is located in the `opentracing-quickstart` {quickstarts-tree-url}/opentracing-quickstart[directory]."
-msgstr "ソリューションは `opentracing-quickstart` {quickstarts-tree-url}/opentracing-quickstart[directory] にあります。"
+msgstr "ソリューションは `opentracing-quickstart` {quickstarts-tree-url}/opentracing-quickstart[ディレクトリ] にあります。"
 
 #. type: Title ==
 #: upstream/_guides/opentracing.adoc:38
