--- a/l10n/po/ja_JP/_guides/redis.adoc.po
+++ b/l10n/po/ja_JP/_guides/redis.adoc.po
@@ -106,7 +106,7 @@ msgstr "Gitレポジトリをクローンするか `git clone {quickstarts-clone
 #. type: Plain text
 #: upstream/_guides/redis.adoc:41
 msgid "The solution is located in the `redis-quickstart` {quickstarts-tree-url}/redis-quickstart[directory]."
-msgstr "ソリューションは `redis-quickstart` {quickstarts-tree-url}/redis-quickstart[directory] にあります。"
+msgstr "ソリューションは `redis-quickstart` {quickstarts-tree-url}/redis-quickstart[ディレクトリ] にあります。"
 
 #. type: Title ==
 #: upstream/_guides/redis.adoc:42
