--- a/l10n/po/ja_JP/_guides/rest-client-multipart.adoc.po
+++ b/l10n/po/ja_JP/_guides/rest-client-multipart.adoc.po
@@ -88,7 +88,7 @@ msgstr "Gitレポジトリをクローンするか `git clone {quickstarts-clone
 #: upstream/_guides/rest-client-multipart.adoc:33
 #, fuzzy
 msgid "The solution is located in the `rest-client-multipart-quickstart` {quickstarts-tree-url}/rest-client-multipart-quickstart[directory]."
-msgstr "ソリューションは `rest-client-multipart-quickstart` {quickstarts-tree-url}/rest-client-multipart-quickstart[directory] にあります。"
+msgstr "ソリューションは `rest-client-multipart-quickstart` {quickstarts-tree-url}/rest-client-multipart-quickstart[ディレクトリ] にあります。"
 
 #. type: Title ==
 #: upstream/_guides/rest-client-multipart.adoc:34
