--- a/l10n/po/ja_JP/_guides/rest-client.adoc.po
+++ b/l10n/po/ja_JP/_guides/rest-client.adoc.po
@@ -87,7 +87,7 @@ msgstr "Gitレポジトリをクローンするか `git clone {quickstarts-clone
 #. type: Plain text
 #: upstream/_guides/rest-client.adoc:32
 msgid "The solution is located in the `rest-client-quickstart` {quickstarts-tree-url}/rest-client-quickstart[directory]."
-msgstr "ソリューションは `rest-client-quickstart` {quickstarts-tree-url}/rest-client-quickstart[directory] にあります。"
+msgstr "ソリューションは `rest-client-quickstart` {quickstarts-tree-url}/rest-client-quickstart[ディレクトリ] にあります。"
 
 #. type: Title ==
 #: upstream/_guides/rest-client.adoc:33
