--- a/l10n/po/ja_JP/_guides/scheduler.adoc.po
+++ b/l10n/po/ja_JP/_guides/scheduler.adoc.po
@@ -102,7 +102,7 @@ msgstr "Git レポジトリをクローンするか `git clone {quickstarts-clon
 #. type: Plain text
 #: upstream/_guides/scheduler.adoc:39
 msgid "The solution is located in the `scheduler-quickstart` {quickstarts-tree-url}/scheduler-quickstart[directory]."
-msgstr "ソリューションは `scheduler-quickstart` {quickstarts-tree-url}/scheduler-quickstart[directory] にあります。"
+msgstr "ソリューションは `scheduler-quickstart` {quickstarts-tree-url}/scheduler-quickstart[ディレクトリ] にあります。"
 
 #. type: Title ==
 #: upstream/_guides/scheduler.adoc:40
