--- a/l10n/po/ja_JP/_guides/security-openid-connect-multitenancy.adoc.po
+++ b/l10n/po/ja_JP/_guides/security-openid-connect-multitenancy.adoc.po
@@ -135,7 +135,7 @@ msgstr "Gitレポジトリをクローンするか `git clone {quickstarts-clone
 #: upstream/_guides/security-openid-connect-multitenancy.adoc:46
 #, fuzzy
 msgid "The solution is located in the `security-openid-connect-multi-tenancy-quickstart` {quickstarts-tree-url}/security-openid-connect-multi-tenancy-quickstart[directory]."
-msgstr "ソリューションは `security-openid-connect-multi-tenancy` {quickstarts-tree-url}/security-openid-connect-multi-tenancy[directory] にあります。"
+msgstr "ソリューションは `security-openid-connect-multi-tenancy` {quickstarts-tree-url}/security-openid-connect-multi-tenancy[ディレクトリ] にあります。"
 
 #. type: Title ==
 #: upstream/_guides/security-openid-connect-multitenancy.adoc:47
