--- a/l10n/po/ja_JP/_guides/spring-boot-properties.adoc.po
+++ b/l10n/po/ja_JP/_guides/spring-boot-properties.adoc.po
@@ -82,7 +82,7 @@ msgstr "Gitレポジトリをクローンするか `git clone {quickstarts-clone
 #: upstream/_guides/spring-boot-properties.adoc:33
 #, fuzzy
 msgid "The solution is located in the `spring-boot-properties-quickstart` {quickstarts-tree-url}/spring-boot-properties-quickstart[directory]."
-msgstr "ソリューションは `spring-boot-properties-quickstart` {quickstarts-tree-url}/spring-boot-properties-quickstart[directory] にあります。"
+msgstr "ソリューションは `spring-boot-properties-quickstart` {quickstarts-tree-url}/spring-boot-properties-quickstart[ディレクトリ] にあります。"
 
 #. type: Title ==
 #: upstream/_guides/spring-boot-properties.adoc:34
