--- a/l10n/po/ja_JP/_guides/spring-data-rest.adoc.po
+++ b/l10n/po/ja_JP/_guides/spring-data-rest.adoc.po
@@ -82,7 +82,7 @@ msgstr "Gitレポジトリをクローンするか `git clone {quickstarts-clone
 #: upstream/_guides/spring-data-rest.adoc:34
 #, fuzzy
 msgid "The solution is located in the `spring-data-rest-quickstart` {quickstarts-tree-url}/spring-data-rest-quickstart[directory]."
-msgstr "ソリューションは `spring-data-rest-quickstart` {quickstarts-tree-url}/spring-data-rest-quickstart[directory] にあります。"
+msgstr "ソリューションは `spring-data-rest-quickstart` {quickstarts-tree-url}/spring-data-rest-quickstart[ディレクトリ] にあります。"
 
 #. type: Title ==
 #: upstream/_guides/spring-data-rest.adoc:35
