--- a/l10n/po/ja_JP/_guides/spring-web.adoc.po
+++ b/l10n/po/ja_JP/_guides/spring-web.adoc.po
@@ -88,7 +88,7 @@ msgstr "Gitレポジトリをクローンするか `git clone {quickstarts-clone
 #: upstream/_guides/spring-web.adoc:35
 #, fuzzy
 msgid "The solution is located in the `spring-web-quickstart` {quickstarts-tree-url}/spring-web-quickstart[directory]."
-msgstr "ソリューションは `spring-web-quickstart` {quickstarts-tree-url}/spring-web-quickstart[directory] にあります。"
+msgstr "ソリューションは `spring-web-quickstart` {quickstarts-tree-url}/spring-web-quickstart[ディレクトリ] にあります。"
 
 #. type: Title ==
 #: upstream/_guides/spring-web.adoc:36
