--- a/l10n/po/ja_JP/_guides/tests-with-coverage.adoc.po
+++ b/l10n/po/ja_JP/_guides/tests-with-coverage.adoc.po
@@ -116,7 +116,7 @@ msgstr "次の章で紹介する手順に沿って、ステップを踏んでア
 #. type: Plain text
 #: upstream/_guides/tests-with-coverage.adoc:51
 msgid "The solution is located in the `tests-with-coverage-quickstart` {quickstarts-tree-url}/tests-with-coverage-quickstart[directory]."
-msgstr "ソリューションは `tests-with-coverage-quickstart` {quickstarts-tree-url}/tests-with-coverage-quickstart[directory] にあります。"
+msgstr "ソリューションは `tests-with-coverage-quickstart` {quickstarts-tree-url}/tests-with-coverage-quickstart[ディレクトリ] にあります。"
 
 #. type: Title ==
 #: upstream/_guides/tests-with-coverage.adoc:52
