--- a/l10n/po/ja_JP/_guides/tika.adoc.po
+++ b/l10n/po/ja_JP/_guides/tika.adoc.po
@@ -110,7 +110,7 @@ msgstr "Git レポジトリをクローンするか `git clone {quickstarts-clon
 #. type: delimited block =
 #: upstream/_guides/tika.adoc:46
 msgid "The solution is located in the `tika-quickstart` {quickstarts-tree-url}/tika-quickstart[directory]."
-msgstr "ソリューションは `tika-quickstart` {quickstarts-tree-url}/tika-quickstart[directory] にあります。"
+msgstr "ソリューションは `tika-quickstart` {quickstarts-tree-url}/tika-quickstart[ディレクトリ] にあります。"
 
 #. type: Plain text
 #: upstream/_guides/tika.adoc:50
