--- a/l10n/po/ja_JP/_guides/validation.adoc.po
+++ b/l10n/po/ja_JP/_guides/validation.adoc.po
@@ -106,7 +106,7 @@ msgstr "Gitレポジトリをクローンするか `git clone {quickstarts-clone
 #. type: Plain text
 #: upstream/_guides/validation.adoc:40
 msgid "The solution is located in the `validation-quickstart` {quickstarts-tree-url}/validation-quickstart[directory]."
-msgstr "ソリューションは `validation-quickstart` {quickstarts-tree-url}/validation-quickstart[directory] にあります。"
+msgstr "ソリューションは `validation-quickstart` {quickstarts-tree-url}/validation-quickstart[ディレクトリ] にあります。"
 
 #. type: Title ==
 #: upstream/_guides/validation.adoc:41
