--- a/l10n/po/ja_JP/_guides/cache.adoc.po
+++ b/l10n/po/ja_JP/_guides/cache.adoc.po
@@ -96,7 +96,7 @@ msgstr "Gitレポジトリをクローンするか `git clone {quickstarts-clone
 #. type: Plain text
 #: upstream/_guides/cache.adoc:40
 msgid "The solution is located in the `cache-quickstart` {quickstarts-tree-url}/cache-quickstart[directory]."
-msgstr "ソリューションは `cache-quickstart` {quickstarts-tree-url}/cache-quickstart[directory] にあります。"
+msgstr "ソリューションは `cache-quickstart` {quickstarts-tree-url}/cache-quickstart[ディレクトリ] にあります。"
 
 #. type: Title ==
 #: upstream/_guides/cache.adoc:41
