--- a/l10n/po/ja_JP/_guides/funqy-amazon-lambda-http.adoc.po
+++ b/l10n/po/ja_JP/_guides/funqy-amazon-lambda-http.adoc.po
@@ -64,7 +64,7 @@ msgstr "Gitレポジトリをクローンするか `git clone {quickstarts-clone
 #: upstream/_guides/funqy-amazon-lambda-http.adoc:34
 #, fuzzy
 msgid "The solution is located in the `funqy-amazon-lambda-quickstart` {quickstarts-tree-url}/funqy-quickstarts/funqy-amazon-lambda-http-quickstart[directory]."
-msgstr "ソリューションは `funqy-amazon-lambda-quickstart` {quickstarts-tree-url}/funqy-quickstarts/funqy-amazon-lambda-http-quickstart[directory] にあります。"
+msgstr "ソリューションは `funqy-amazon-lambda-quickstart` {quickstarts-tree-url}/funqy-quickstarts/funqy-amazon-lambda-http-quickstart[ディレクトリ] にあります。"
 
 #. type: Title ==
 #: upstream/_guides/funqy-amazon-lambda-http.adoc:35
