--- a/l10n/po/ja_JP/_guides/microprofile-graphql.adoc.po
+++ b/l10n/po/ja_JP/_guides/microprofile-graphql.adoc.po
@@ -141,7 +141,7 @@ msgstr "Gitレポジトリをクローンするか `git clone {quickstarts-clone
 #. type: quote
 #: upstream/_guides/microprofile-graphql.adoc:63
 msgid "The solution is located in the `microprofile-graphql-quickstart` {quickstarts-tree-url}/microprofile-graphql-quickstart[directory]."
-msgstr "ソリューションは `microprofile-graphql-quickstart` {quickstarts-tree-url}/microprofile-graphql-quickstart[directory] にあります。"
+msgstr "ソリューションは `microprofile-graphql-quickstart` {quickstarts-tree-url}/microprofile-graphql-quickstart[ディレクトリ] にあります。"
 
 #. type: Title ==
 #: upstream/_guides/microprofile-graphql.adoc:64
