--- a/l10n/po/ja_JP/_guides/microprofile-health.adoc.po
+++ b/l10n/po/ja_JP/_guides/microprofile-health.adoc.po
@@ -3,25 +3,25 @@
 # This file is distributed under the same license as the PACKAGE package.
 # FIRST AUTHOR <EMAIL@ADDRESS>, YEAR.
 #
-#, fuzzy
 msgid ""
 msgstr ""
-"Project-Id-Version: PACKAGE VERSION\n"
+"Project-Id-Version: \n"
 "POT-Creation-Date: 2021-03-03 16:17+0000\n"
-"PO-Revision-Date: YEAR-MO-DA HO:MI+ZONE\n"
-"Last-Translator: FULL NAME <EMAIL@ADDRESS>\n"
-"Language-Team: LANGUAGE <LL@li.org>\n"
-"Language: \n"
+"PO-Revision-Date: 2021-04-03 12:54+0900\n"
+"Language: ja\n"
 "MIME-Version: 1.0\n"
 "Content-Type: text/plain; charset=UTF-8\n"
 "Content-Transfer-Encoding: 8bit\n"
+"Last-Translator: \n"
+"Language-Team: \n"
+"X-Generator: Poedit 2.4.2\n"
 
 #. This guide is maintained in the main Quarkus repository
 #. and pull requests should be submitted there:
 #. https://github.com/quarkusio/quarkus/tree/master/docs/src/main/asciidoc
 #. type: Title =
 #: upstream/_guides/microprofile-health.adoc:6
-#, fuzzy, no-wrap
+#, no-wrap
 msgid "Quarkus - MicroProfile Health"
 msgstr "Quarkus - MicroProfile Health"
 
@@ -32,7 +32,6 @@ msgstr "このガイドでは、QuarkusアプリケーションがSmallRye Healt
 
 #. type: Plain text
 #: upstream/_guides/microprofile-health.adoc:17
-#, fuzzy
 msgid "MicroProfile Health allows applications to provide information about their state to external viewers which is typically useful in cloud environments where automated processes must be able to determine whether the application should be discarded or restarted."
 msgstr "MicroProfile Health は、アプリケーションの状態に関する情報を外部のビューアーに提供することを可能にします。これは、アプリケーションを廃棄するか再起動するかを自動化されたプロセスで判断する必要があるクラウド環境で一般的に有用です。"
 
@@ -74,7 +73,6 @@ msgstr "アーキテクチャ"
 
 #. type: Plain text
 #: upstream/_guides/microprofile-health.adoc:32
-#, fuzzy
 msgid "In this guide, we build a simple REST application that exposes MicroProfile Health functionalities at the `/q/health/live` and `/q/health/ready` endpoints according to the specification."
 msgstr "このガイドでは、仕様に従って `/q/health/live` および `/q/health/ready` エンドポイントで MicroProfile Health 機能を公開するシンプルな REST アプリケーションを構築します。"
 
@@ -85,9 +83,8 @@ msgstr "ソリューション"
 
 #. type: Plain text
 #: upstream/_guides/microprofile-health.adoc:37
-#, fuzzy
 msgid "We recommend that you follow the instructions in the next sections and create the application step by step. However, you can go right to the completed example."
-msgstr "次の章で紹介する手順に沿って、ステップを踏んでアプリを作成することをお勧めします。ただし、完成した例にそのまま進んでも構いません。"
+msgstr "次のセクションで紹介する手順に沿って、ステップを踏んでアプリを作成することをお勧めします。ただし、完成した例にそのまま進んでも構いません。"
 
 #. type: Plain text
 #: upstream/_guides/microprofile-health.adoc:40
@@ -96,13 +93,12 @@ msgstr "Gitレポジトリをクローンするか `git clone {quickstarts-clone
 
 #. type: Plain text
 #: upstream/_guides/microprofile-health.adoc:43
-#, fuzzy
 msgid "The solution is located in the `microprofile-health-quickstart` {quickstarts-tree-url}/microprofile-health-quickstart[directory]."
-msgstr "ソリューションは `microprofile-health-quickstart` {quickstarts-tree-url}/microprofile-health-quickstart[directory] にあります。"
+msgstr "ソリューションは `microprofile-health-quickstart` {quickstarts-tree-url}/microprofile-health-quickstart[ディレクトリ] にあります。"
 
 #. type: Title ==
 #: upstream/_guides/microprofile-health.adoc:44
-#, fuzzy, no-wrap
+#, no-wrap
 msgid "Creating the Maven Project"
 msgstr "Mavenプロジェクトの作成"
 
