--- a/l10n/po/ja_JP/_guides/mongodb-panache.adoc.po
+++ b/l10n/po/ja_JP/_guides/mongodb-panache.adoc.po
@@ -135,7 +135,7 @@ msgstr "Gitレポジトリをクローンするか `git clone {quickstarts-clone
 #: upstream/_guides/mongodb-panache.adoc:61
 #, fuzzy
 msgid "The solution is located in the `mongodb-panache-quickstart` {quickstarts-tree-url}/mongodb-panache-quickstart[directory]."
-msgstr "ソリューションは `mongodb-panache-quickstart` {quickstarts-tree-url}/mongodb-panache-quickstart[directory] にあります。"
+msgstr "ソリューションは `mongodb-panache-quickstart` {quickstarts-tree-url}/mongodb-panache-quickstart[ディレクトリ] にあります。"
 
 #. type: Title ==
 #: upstream/_guides/mongodb-panache.adoc:62
