--- a/l10n/po/ja_JP/_guides/mongodb.adoc.po
+++ b/l10n/po/ja_JP/_guides/mongodb.adoc.po
@@ -111,7 +111,7 @@ msgstr "Gitレポジトリをクローンするか `git clone {quickstarts-clone
 #. type: Plain text
 #: upstream/_guides/mongodb.adoc:39
 msgid "The solution is located in the `mongodb-quickstart` {quickstarts-tree-url}/mongodb-quickstart[directory]."
-msgstr "ソリューションは `mongodb-quickstart` {quickstarts-tree-url}/mongodb-quickstart[directory] にあります。"
+msgstr "ソリューションは `mongodb-quickstart` {quickstarts-tree-url}/mongodb-quickstart[ディレクトリ] にあります。"
 
 #. type: Title ==
 #: upstream/_guides/mongodb.adoc:40
