--- a/l10n/po/ja_JP/_guides/security-jdbc.adoc.po
+++ b/l10n/po/ja_JP/_guides/security-jdbc.adoc.po
@@ -111,7 +111,7 @@ msgstr "Gitレポジトリをクローンするか `git clone {quickstarts-clone
 #. type: Plain text
 #: upstream/_guides/security-jdbc.adoc:42
 msgid "The solution is located in the `security-jdbc-quickstart` {quickstarts-tree-url}/security-jdbc-quickstart[directory]."
-msgstr "ソリューションは `security-jdbc-quickstart` {quickstarts-tree-url}/security-jdbc-quickstart[directory] にあります。"
+msgstr "ソリューションは `security-jdbc-quickstart` {quickstarts-tree-url}/security-jdbc-quickstart[ディレクトリ] にあります。"
 
 #. type: Title ==
 #: upstream/_guides/security-jdbc.adoc:43
