--- a/l10n/po/ja_JP/_guides/security-keycloak-authorization.adoc.po
+++ b/l10n/po/ja_JP/_guides/security-keycloak-authorization.adoc.po
@@ -161,7 +161,7 @@ msgstr "Gitレポジトリをクローンするか `git clone {quickstarts-clone
 #. type: Plain text
 #: upstream/_guides/security-keycloak-authorization.adoc:65
 msgid "The solution is located in the `security-keycloak-authorization-quickstart` {quickstarts-tree-url}/security-keycloak-authorization-quickstart[directory]."
-msgstr "ソリューションは `security-keycloak-authorization-quickstart` {quickstarts-tree-url}/security-keycloak-authorization-quickstart[directory] にあります。"
+msgstr "ソリューションは `security-keycloak-authorization-quickstart` {quickstarts-tree-url}/security-keycloak-authorization-quickstart[ディレクトリ] にあります。"
 
 #. type: Title ==
 #: upstream/_guides/security-keycloak-authorization.adoc:66
