--- a/l10n/po/ja_JP/_guides/smallrye-metrics.adoc.po
+++ b/l10n/po/ja_JP/_guides/smallrye-metrics.adoc.po
@@ -3,37 +3,35 @@
 # This file is distributed under the same license as the PACKAGE package.
 # FIRST AUTHOR <EMAIL@ADDRESS>, YEAR.
 #
-#, fuzzy
 msgid ""
 msgstr ""
-"Project-Id-Version: PACKAGE VERSION\n"
+"Project-Id-Version: \n"
 "POT-Creation-Date: 2021-03-30 14:04+0000\n"
-"PO-Revision-Date: YEAR-MO-DA HO:MI+ZONE\n"
-"Last-Translator: FULL NAME <EMAIL@ADDRESS>\n"
-"Language-Team: LANGUAGE <LL@li.org>\n"
-"Language: \n"
+"PO-Revision-Date: 2021-04-03 12:51+0900\n"
+"Language: ja\n"
 "MIME-Version: 1.0\n"
 "Content-Type: text/plain; charset=UTF-8\n"
 "Content-Transfer-Encoding: 8bit\n"
+"Last-Translator: \n"
+"Language-Team: \n"
+"X-Generator: Poedit 2.4.2\n"
 
 #. This guide is maintained in the main Quarkus repository
 #. and pull requests should be submitted there:
 #. https://github.com/quarkusio/quarkus/tree/main/docs/src/main/asciidoc
 #. type: Title =
 #: upstream/_guides/smallrye-metrics.adoc:6
-#, fuzzy, no-wrap
+#, no-wrap
 msgid "Quarkus - SmallRye Metrics"
 msgstr "Quarkus - SmallRye Metrics"
 
 #. type: Plain text
 #: upstream/_guides/smallrye-metrics.adoc:12
-#, fuzzy
 msgid "This guide demonstrates how your Quarkus application can use https://github.com/smallrye/smallrye-metrics/[SmallRye Metrics], an implementation of the https://github.com/eclipse/microprofile-metrics/[MicroProfile Metrics] specification."
 msgstr "このガイドでは、 link:https://github.com/eclipse/microprofile-metrics/[MicroProfile Metrics]仕様の実装である link:https://github.com/smallrye/smallrye-metrics/[SmallRye Metrics]をQuarkusアプリケーションで使用する方法を説明します。"
 
 #. type: Plain text
 #: upstream/_guides/smallrye-metrics.adoc:15
-#, fuzzy
 msgid "SmallRye Metrics allows applications to gather various metrics and statistics that provide insights into what is happening inside the application."
 msgstr "SmallRye Metricsでは、アプリケーションが様々なメトリクスや統計情報を収集し、アプリケーション内で何が起こっているかを把握することができます。"
 
@@ -49,9 +47,8 @@ msgstr "このガイドで説明するアプリケーション固有のメトリ
 
 #. type: Plain text
 #: upstream/_guides/smallrye-metrics.adoc:26
-#, fuzzy
 msgid "link:micrometer[Micrometer] is the recommended approach to metrics for Quarkus.  Use the SmallRye Metrics extension when it's required to retain MicroProfile specification compatibility."
-msgstr "link:micrometer[マイクロメーター]は、Quarkusで推奨されるメトリクスの手法です。MicroProfile仕様との互換性を保つために必要な場合は、SmallRye Metricsエクステンションを使用してください。"
+msgstr "link:micrometer[Micrometer]が、Quarkusで推奨されるメトリクスの手法です。MicroProfile仕様との互換性を保つために必要な場合に、SmallRye Metricsエクステンションを使用してください。"
 
 #. type: Title ==
 #: upstream/_guides/smallrye-metrics.adoc:27
@@ -66,7 +63,6 @@ msgstr "このガイドを完成させるには、以下が必要です:"
 
 #. type: Plain text
 #: upstream/_guides/smallrye-metrics.adoc:32
-#, fuzzy
 msgid "less than 15 minutes"
 msgstr "15分未満"
 
@@ -115,11 +111,11 @@ msgstr "Gitレポジトリをクローンするか `git clone {quickstarts-clone
 #. type: Plain text
 #: upstream/_guides/smallrye-metrics.adoc:49
 msgid "The solution is located in the `microprofile-metrics-quickstart` {quickstarts-tree-url}/microprofile-metrics-quickstart[directory]."
-msgstr "ソリューションは `microprofile-metrics-quickstart` {quickstarts-tree-url}/microprofile-metrics-quickstart[directory] にあります。"
+msgstr "ソリューションは `microprofile-metrics-quickstart` {quickstarts-tree-url}/microprofile-metrics-quickstart[ディレクトリ] にあります。"
 
 #. type: Title ==
 #: upstream/_guides/smallrye-metrics.adoc:50
-#, fuzzy, no-wrap
+#, no-wrap
 msgid "Creating the Maven Project"
 msgstr "Mavenプロジェクトの作成"
 
@@ -143,9 +139,8 @@ msgstr ""
 
 #. type: Plain text
 #: upstream/_guides/smallrye-metrics.adoc:66
-#, fuzzy
 msgid "This command generates a Maven project, importing the `smallrye-metrics`."
-msgstr "このコマンドは、 `smallrye-metrics`.NETをインポートしてMavenプロジェクトを生成します。"
+msgstr "このコマンドは、 `smallrye-metrics`をインポートしてMavenプロジェクトを生成します。"
 
 #. type: Plain text
 #: upstream/_guides/smallrye-metrics.adoc:69
