--- a/l10n/po/ja_JP/_guides/spring-data-jpa.adoc.po
+++ b/l10n/po/ja_JP/_guides/spring-data-jpa.adoc.po
@@ -82,7 +82,7 @@ msgstr "Gitレポジトリをクローンするか `git clone {quickstarts-clone
 #: upstream/_guides/spring-data-jpa.adoc:33
 #, fuzzy
 msgid "The solution is located in the `spring-data-jpa-quickstart` {quickstarts-tree-url}/spring-data-jpa-quickstart[directory]."
-msgstr "ソリューションは `spring-data-jpa-quickstart` {quickstarts-tree-url}/spring-data-jpa-quickstart[directory] にあります。"
+msgstr "ソリューションは `spring-data-jpa-quickstart` {quickstarts-tree-url}/spring-data-jpa-quickstart[ディレクトリ] にあります。"
 
 #. type: Title ==
 #: upstream/_guides/spring-data-jpa.adoc:34
