--- a/l10n/po/ja_JP/_guides/spring-scheduled.adoc.po
+++ b/l10n/po/ja_JP/_guides/spring-scheduled.adoc.po
@@ -94,7 +94,7 @@ msgstr "Gitレポジトリをクローンするか `git clone {quickstarts-clone
 #: upstream/_guides/spring-scheduled.adoc:36
 #, fuzzy
 msgid "The solution is located in the `spring-scheduled-quickstart` {quickstarts-tree-url}/spring-scheduled-quickstart[directory]."
-msgstr "ソリューションは `spring-scheduled-quickstart` {quickstarts-tree-url}/spring-scheduled-quickstart[directory] にあります。"
+msgstr "ソリューションは `spring-scheduled-quickstart` {quickstarts-tree-url}/spring-scheduled-quickstart[ディレクトリ] にあります。"
 
 #. type: Title ==
 #: upstream/_guides/spring-scheduled.adoc:37
