Apply translation memory

--- a/l10n/po/ja_JP/_versions/1.11/guides/microprofile-health.adoc.po
+++ b/l10n/po/ja_JP/_versions/1.11/guides/microprofile-health.adoc.po
@@ -23,7 +23,7 @@ msgstr ""
 #: upstream/_versions/1.11/guides/microprofile-health.adoc:6
 #, no-wrap
 msgid "Quarkus - MicroProfile Health"
-msgstr ""
+msgstr "Quarkus - MicroProfile Health"
 
 #. type: Plain text
 #: upstream/_versions/1.11/guides/microprofile-health.adoc:12
@@ -33,7 +33,7 @@ msgstr "このガイドでは、QuarkusアプリケーションがSmallRye Healt
 #. type: Plain text
 #: upstream/_versions/1.11/guides/microprofile-health.adoc:17
 msgid "MicroProfile Health allows applications to provide information about their state to external viewers which is typically useful in cloud environments where automated processes must be able to determine whether the application should be discarded or restarted."
-msgstr ""
+msgstr "MicroProfile Health は、アプリケーションの状態に関する情報を外部のビューアーに提供することを可能にします。これは、アプリケーションを廃棄するか再起動するかを自動化されたプロセスで判断する必要があるクラウド環境で一般的に有用です。"
 
 #. type: Title ==
 #: upstream/_versions/1.11/guides/microprofile-health.adoc:18
@@ -75,7 +75,7 @@ msgstr "アーキテクチャ"
 #. type: Plain text
 #: upstream/_versions/1.11/guides/microprofile-health.adoc:32
 msgid "In this guide, we build a simple REST application that exposes MicroProfile Health functionalities at the `/q/health/live` and `/q/health/ready` endpoints according to the specification."
-msgstr ""
+msgstr "このガイドでは、仕様に従って `/q/health/live` および `/q/health/ready` エンドポイントで MicroProfile Health 機能を公開するシンプルな REST アプリケーションを構築します。"
 
 #. type: Title ==
 #: upstream/_versions/1.11/guides/microprofile-health.adoc:33
@@ -96,7 +96,7 @@ msgstr "Gitレポジトリをクローンするか `git clone {quickstarts-clone
 #. type: Plain text
 #: upstream/_versions/1.11/guides/microprofile-health.adoc:43
 msgid "The solution is located in the `microprofile-health-quickstart` {quickstarts-tree-url}/microprofile-health-quickstart[directory]."
-msgstr ""
+msgstr "ソリューションは `microprofile-health-quickstart` {quickstarts-tree-url}/microprofile-health-quickstart[ディレクトリ] にあります。"
 
 #. type: Title ==
 #: upstream/_versions/1.11/guides/microprofile-health.adoc:44
